--- a/4.02.ipynb
+++ b/4.02.ipynb
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "1c42c45a",
    "metadata": {},
    "outputs": [
@@ -1222,17 +1222,18 @@
        "Two-Door Car     1886\n",
        "SUV              1796\n",
        "Sports Car        484\n",
-       "Luxury Car        347\n",
+       "Luxury            347\n",
        "Name: vehicle_class, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "categorical_df['vehicle_class'] = np.where(categorical_df['vehicle_class'] == 'Luxury SUV', 'Luxury Car', categorical_df['vehicle_class'])\n",
+    "categorical_df['vehicle_class'] = categorical_df['vehicle_class'].str.replace('Luxury Car','Luxury')\n",
     "categorical_df['vehicle_class'].value_counts()"
    ]
   },
